# basic-pitch-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: midi.py  notes.py  track.py
app/services/: midi.py  notes.py  track.py
config/: origins.py
constants/: paths.py
generator/: controller.py
generator/utils/: audio_to_midi.py  basic_pitch_process.py  clean_midi.py
models/: db.py  instruments.py  midi.py  notes.py  track.py
utils/: audio_to_midi.py  lib.py  logger.py  midi_to_notes.py  save_temp_file.py
