[project]
name = "basic-pitch-server"
version = "0.1.0"
description = "FastAPI server for audio to MIDI conversion using Basic-Pitch"
readme = "README.md"
requires-python = ">=3.10.0,<3.11.0"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
    "numpy>=1.20.0",
    "soundfile>=0.10.0",
    "scikit-learn>=1.0.0,<1.3.0",
    "setuptools>=65.0.0",
    "pretty-midi>=0.2.9",
    "librosa>=0.9.0",
    "resampy>=0.3.1",
    "h5py>=3.1.0",
    "basic-pitch[tf]==0.4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "music21>=9.5.0",
    "partitura>=1.6.0",
    "tayuya>=0.0.4",
    "mido>=1.3.3",
    "miditoolkit>=1.0.1",
]
